appId: host.exp.exponent
env:
  EMAIL_TESTE: teste@vasshotel.com
  SENHA_TESTE: teste123456
---
- launchApp:
    clearState: true
- openLink: "exp://127.0.0.1:8081"
- extendedWaitUntil:
    visible: "Continue"
    timeout: 20000
    optional: true
- tapOn:
    point: "50%,15%"
    optional: true
- runFlow: helpers/login_helper.yaml
- tapOn:
    id: "btn-logout"
- assertVisible: "Sair"
- tapOn: "Sair"
- extendedWaitUntil:
    visible:
      id: "btn-welcome-login"
    timeout: 20000
- assertVisible:
    id: "btn-welcome-login"
